<resources>

    <!-- MainActivity -->
    <string name="app_name" translatable="false">Simple Calc</string>
    <string name="type_operand_1">Type Operand 1</string>
    <string name="type_operand_2">Type Operand 2</string>
    <string name="add">Add</string>
    <string name="sub">Sub</string>
    <string name="div">Div</string>
    <string name="mul">Mul</string>

    <!-- Message for textview in case of errors  -->
    <string name="computationError">Error</string>
    <string name="current_operation">Current Operation</string>

    <!-- Settings Activity -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Select Theme Preference -->
    <string name="select_theme_title">Select theme</string>
    <string name="night_mode_entry">Night mode</string>
    <string name="day_mode_entry">Day mode</string>
    <string name="auto_mode_entry">Auto</string>



</resources>